modify to use batches